--- a/model/pom.xml
+++ b/model/pom.xml
@@ -23,6 +23,6 @@
   <packaging>pom</packaging>
   <modules>
     <module>jakarta.xml.bind</module>
-    <!--    <module>emf</module>-->
+    <module>emf</module>
   </modules>
 </project>
