--- a/writer/pom.xml
+++ b/writer/pom.xml
@@ -10,26 +10,18 @@
 * SPDX-License-Identifier: EPL-2.0
 **********************************************************************/
 -->
-<project
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-  xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
   <parent>
     <groupId>org.eclipse.daanse</groupId>
-    <artifactId>org.eclipse.daanse.pom.parent</artifactId>
-    <version>0.0.4</version>
+    <artifactId>org.eclipse.daanse.odc</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
   </parent>
-
-  <artifactId>org.eclipse.daanse.odc</artifactId>
-
+  <artifactId>org.eclipse.daanse.odc.writer</artifactId>
   <packaging>pom</packaging>
-
-  <version>0.0.1-SNAPSHOT</version>
-
   <modules>
-    <module>model</module>
-    <module>writer</module>
+    <module>simple</module>
   </modules>
 </project>
